--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,7 +23,7 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           result-encoding: string
           script: |
-            return github.repos.getLatestRelease({
+            return github.rest.repos.getLatestRelease({
                 owner: "buildpacks",
                 repo: "pack"
             }).then(result => {
@@ -69,7 +69,7 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           result-encoding: string
           script: |
-            return github.repos.getLatestRelease({
+            return github.rest.repos.getLatestRelease({
                 owner: "buildpacks",
                 repo: "pack"
             }).then(result => {
@@ -105,7 +105,7 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           result-encoding: string
           script: |
-            return github.repos.getLatestRelease({
+            return github.rest.repos.getLatestRelease({
                 owner: "buildpacks",
                 repo: "pack"
             }).then(result => {
