Add cowsay extension to demonstrate run image extension
Signed-off-by: Natalie Arellano <narellano@vmware.com>

--- a/builders/alpine/builder.toml
+++ b/builders/alpine/builder.toml
@@ -28,6 +28,11 @@ id = "samples/curl"
 version = "0.0.1"
 uri = "../../extensions/curl"
 
+[[extensions]]
+id = "samples/cowsay"
+version = "0.0.1"
+uri = "../../extensions/cowsay"
+
 # Order used for detection (buildpacks)
 [[order]]
 [[order.group]]
@@ -57,6 +62,10 @@ version = "0.0.1"
 
 [[order-extensions.group]]
 id = "samples/curl"
+version = "0.0.1"
+
+[[order-extensions.group]]
+id = "samples/cowsay"
 version = "0.0.1"
 
 # Stack that will be used by the builder
