--- a/buildpacks/hello-extensions/bin/build
+++ b/buildpacks/hello-extensions/bin/build
@@ -13,4 +13,9 @@ type = "curl"
 command = ["curl"]
 args = ["--version"]
 default = true
+
+[[processes]]
+type = "cowsay"
+command = ["cowsay"]
+args = ["MOOOO!"]
 EOL
