--- a/extensions/tree/extension.toml
+++ b/extensions/tree/extension.toml
@@ -7,4 +7,4 @@ id = "samples/tree"
 version = "0.0.1"
 name = "Tree Extension"
 homepage = "https://github.com/buildpacks/samples/tree/main/extensions/tree"
-description = "A simple extension that installs tree at build time"
+description = "A simple extension that installs tree on the builder image"
