--- a/extensions/curl/extension.toml
+++ b/extensions/curl/extension.toml
@@ -7,4 +7,4 @@ id = "samples/curl"
 version = "0.0.1"
 name = "Curl Extension"
 homepage = "https://github.com/buildpacks/samples/tree/main/extensions/curl"
-description = "A simple extension that switches the runtime base image to `curlimages/curl:latest`"
+description = "A simple extension that switches the runtime base image to `run-image-curl`, based on `curlimages/curl`"
