images used in buildimages readme and the dotnet samples
Signed-off-by: Joe Kimmel <jkimmel@vmware.com>

--- a/builders/dotnet-framework-2004/builder.toml
+++ b/builders/dotnet-framework-2004/builder.toml
@@ -10,6 +10,15 @@ uri = "../../buildpacks/dotnet-framework"
 id = "samples/dotnet-framework"
 version = "0.0.1"
 
+# Images that will be used by the builder
+[build]
+image = "cnbs/sample-img-build:dotnet-framework-2004""
+
+
+[run]
+[[run.images]]
+image = "cnbs/sample-img-run:dotnet-framework-2004""
+
 # Stack that will be used by the builder
 [stack]
 id = "io.buildpacks.samples.stacks.dotnet-framework-2004"
