--- a/builders/dotnet-framework-1809/builder.toml
+++ b/builders/dotnet-framework-1809/builder.toml
@@ -10,7 +10,18 @@ uri = "../../buildpacks/dotnet-framework"
 id = "samples/dotnet-framework"
 version = "0.0.1"
 
-# Stack that will be used by the builder
+# Images that will be used by the builder
+[build]
+image = "cnbs/sample-img-build:dotnet-framework-1809""
+
+
+[run]
+[[run.images]]
+image = "cnbs/sample-img-run:dotnet-framework-1809""
+
+# Note: This sample still includes the stack as an example of backwards compatibility.
+# While stacks are now deprecated, you may wish to include both stacks and images during a migratory process or to ensure compatibility with older platforms
+# When both are present, newer versions of pack will use the build and run images preferentially.
 [stack]
 id = "io.buildpacks.samples.stacks.dotnet-framework-1809"
 run-image = "cnbs/sample-stack-run:dotnet-framework-1809"
