--- a/builders/dotnet-framework-2022/builder.toml
+++ b/builders/dotnet-framework-2022/builder.toml
@@ -10,8 +10,12 @@ uri = "../../buildpacks/dotnet-framework"
 id = "samples/dotnet-framework"
 version = "0.0.1"
 
-# Stack that will be used by the builder
-[stack]
-id = "io.buildpacks.samples.stacks.dotnet-framework-2022"
-run-image = "cnbs/sample-stack-run:dotnet-framework-2022"
-build-image = "cnbs/sample-stack-build:dotnet-framework-2022"
+# Images that will be used by the builder
+[build]
+image = "cnbs/sample-img-build:dotnet-framework-2022""
+
+
+[run]
+[[run.images]]
+image = "cnbs/sample-img-run:dotnet-framework-2022""
+
