--- a/builders/nanoserver-1809/builder.toml
+++ b/builders/nanoserver-1809/builder.toml
@@ -8,8 +8,9 @@ uri = "docker://cnbs/sample-package:hello-universe-windows"
 id = "samples/hello-universe-windows"
 version = "0.0.1"
 
-# Stack that will be used by the builder
-[stack]
-id = "io.buildpacks.samples.stacks.nanoserver-1809"
-run-image = "cnbs/sample-stack-run:nanoserver-1809"
-build-image = "cnbs/sample-stack-build:nanoserver-1809"
+[build]
+image = "cnbs/samples-img-build:nanoserver-1809"
+
+[run]
+[run.images]
+image = "cnbs/sample-img-run:nanoserver-1809"
