Export JAVA_HOME before running mvn
Ensure that we export JAVA_HOME before we executed JDK tooling

--- a/buildpacks/java-maven/bin/build
+++ b/buildpacks/java-maven/bin/build
@@ -68,6 +68,7 @@ else
 fi
 EOF
 fi
+export JAVA_HOME=${jdk_layer_dir}
 
 # Set env variables to make jdk accessible
 for var in "$layers_dir"/jdk/env/*; do
