Debug in order to fix JAVA_HOME

--- a/buildpacks/java-maven/bin/build
+++ b/buildpacks/java-maven/bin/build
@@ -69,6 +69,8 @@ fi
 EOF
 fi
 export JAVA_HOME=${jdk_layer_dir}
+echo "JAVA_HOME " $JAVA_HOME
+ls ${jdk_layer_dir}
 
 # Set env variables to make jdk accessible
 for var in "$layers_dir"/jdk/env/*; do
