--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ workflows:
   main:
     jobs:
       - pack/build:
-          working-directory: apps/java-maven
+          working-directory: apps/ruby-bundler
           image-name: cnbs/circleci-sample
           builder: 'cnbs/sample-builder:jammy'
           version: '0.29.0'
