--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ workflows:
   main:
     jobs:
       - pack/build:
+          executor-image: ubuntu-2204
           working-directory: apps/ruby-bundler
           image-name: cnbs/circleci-sample
           builder: 'cnbs/sample-builder:jammy'
