Make web the default process for Java (to fix CircleCI)
Signed-off-by: Natalie Arellano <narellano@vmware.com>

--- a/buildpacks/java-maven/bin/build
+++ b/buildpacks/java-maven/bin/build
@@ -128,6 +128,7 @@ for jar_file in $(find "$target_dir" -maxdepth 1 -name "*.jar" -type f); do
 [[processes]]
 type = "web"
 command = ["java", "-jar", "${jar_file}"]
+default = true
 EOL
   break;
 done
