Fix extensions demo: use vim instead of tree
Tree comes with alpine:3 now (!) so it's not useful for our demo purposes
Also fixes cowsay install

Signed-off-by: Natalie Arellano <narellano@vmware.com>

--- a/builders/alpine/builder.toml
+++ b/builders/alpine/builder.toml
@@ -19,9 +19,9 @@ uri = "../../buildpacks/hello-extensions"
 
 # Extensions to include in builder
 [[extensions]]
-id = "samples/tree"
+id = "samples/vim"
 version = "0.0.1"
-uri = "../../extensions/tree"
+uri = "../../extensions/vim"
 
 [[extensions]]
 id = "samples/curl"
@@ -57,7 +57,7 @@ version = "0.0.1"
 # Order used for detection (extensions)
 [[order-extensions]]
 [[order-extensions.group]]
-id = "samples/tree"
+id = "samples/vim"
 version = "0.0.1"
 
 [[order-extensions.group]]
