Use a release candidate builder for alpine
We require the latest RC lifecycle to build extensions

Signed-off-by: Aidan Delaney <aidan.delaney@gmail.com>

--- a/builders/alpine/builder.toml
+++ b/builders/alpine/builder.toml
@@ -73,3 +73,6 @@ version = "0.0.1"
 id = "io.buildpacks.samples.stacks.alpine"
 run-image = "cnbs/sample-stack-run:alpine"
 build-image = "cnbs/sample-stack-build:alpine"
+
+[lifecycle]
+version = "0.17.0-rc.3"
