Fix the command command to work with Buildpacks API 0.9
Signed-off-by: Domenico Luciani <dluciani@vmware.com>

--- a/apps/bash-script/bash-script-buildpack/bin/build
+++ b/apps/bash-script/bash-script-buildpack/bin/build
@@ -10,7 +10,7 @@ layers_dir=$1
 cat >> "${layers_dir}/launch.toml" <<EOL
 [[processes]]
 type = "web"
-command = "./app.sh"
+command = ["./app.sh"]
 EOL
 
 # LIST CONTENTS
