--- a/extensions/vim/extension.toml
+++ b/extensions/vim/extension.toml
@@ -5,6 +5,6 @@ api = "0.9"
 [extension]
 id = "samples/vim"
 version = "0.0.1"
-name = "Tree Extension"
-homepage = "https://github.com/buildpacks/samples/tree/main/extensions/vim"
+name = "Vim Extension"
+homepage = "https://github.com/buildpacks/samples/vim/main/extensions/vim"
 description = "A simple extension that installs vim on the builder image"
