Remove Remove dotnet-framework-1809 and upgrade nanoserver
To reduce the number of Windows samples and use later versions of things

Signed-off-by: Natalie Arellano <narellano@vmware.com>

--- a/stacks/nanoserver-2022/base/Dockerfile
+++ b/stacks/nanoserver-2022/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/windows/nanoserver:1809
+FROM mcr.microsoft.com/windows/nanoserver:ltsc2022
 
 # non-zero sets all user-owned directories to BUILTIN\Users
 ARG cnb_uid=1
