--- a/apps/batch-script/batch-script-buildpack/buildpack.toml
+++ b/apps/batch-script/batch-script-buildpack/buildpack.toml
@@ -7,6 +7,12 @@ id = "samples/batch-script"
 version = "0.0.1"
 name = "Batch Script Buildpack"
 
-# Stacks that the buildpack will work with
+# Targets the buildpack will work with
+[[targets]]
+os = "windows"
+[[targets.distros]]
+version = "10.0.20348.1906"
+
+# Stacks (deprecated) the buildpack will work with
 [[stacks]]
 id = "io.buildpacks.samples.stacks.nanoserver-2022"
