--- a/base-images/dotnet-framework-2022/run/Dockerfile
+++ b/base-images/dotnet-framework-2022/run/Dockerfile
@@ -1,6 +1,5 @@
-FROM mcr.microsoft.com/dotnet/framework/aspnet:4.8-windowsservercore-ltsc2022
-
-ARG stack_id
+ARG base_image
+FROM ${base_image}
 
 # Create unresolved symlink from c:\inetpub\wwwroot to c:\workspace
 RUN powershell -Command \
@@ -11,7 +10,3 @@ RUN powershell -Command \
 
 # launcher requires a non-empty PATH to workaround https://github.com/buildpacks/pack/issues/800
 ENV PATH=C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C:\\Windows\\System32\\OpenSSH\\;C:\\Users\\ContainerAdministrator\\AppData\\Local\\Microsoft\\WindowsApps
-
-LABEL io.buildpacks.stack.id=${stack_id}
-
-USER ContainerAdministrator
