--- a/builders/alpine/builder.toml
+++ b/builders/alpine/builder.toml
@@ -68,8 +68,15 @@ version = "0.0.1"
 id = "samples/cowsay"
 version = "0.0.1"
 
-# Stack that will be used by the builder
+# Base images used to create the builder
+[build]
+image = "cnbs/sample-base-build:alpine"
+[run]
+[[run.images]]
+image = "cnbs/sample-base-run:alpine"
+
+# Stack (deprecated) used to create the builder
 [stack]
 id = "io.buildpacks.samples.stacks.alpine"
-run-image = "cnbs/sample-stack-run:alpine"
-build-image = "cnbs/sample-stack-build:alpine"
+build-image = "cnbs/sample-base-build:alpine"
+run-image = "cnbs/sample-base-run:alpine"
