--- a/builders/dotnet-framework-2022/builder.toml
+++ b/builders/dotnet-framework-2022/builder.toml
@@ -10,8 +10,15 @@ uri = "../../buildpacks/dotnet-framework"
 id = "samples/dotnet-framework"
 version = "0.0.1"
 
-# Stack that will be used by the builder
+# Base images used to create the builder
+[build]
+image = "cnbs/sample-base-build:dotnet-framework-2022"
+[run]
+[[run.images]]
+image = "cnbs/sample-base-run:dotnet-framework-2022"
+
+# Stack (deprecated) used to create the builder
 [stack]
 id = "io.buildpacks.samples.stacks.dotnet-framework-2022"
-run-image = "cnbs/sample-stack-run:dotnet-framework-2022"
-build-image = "cnbs/sample-stack-build:dotnet-framework-2022"
+build-image = "cnbs/sample-base-build:dotnet-framework-2022"
+run-image = "cnbs/sample-base-run:dotnet-framework-2022"
