--- a/builders/jammy/builder.toml
+++ b/builders/jammy/builder.toml
@@ -38,8 +38,15 @@ version = "0.0.1"
 id = "samples/hello-universe"
 version = "0.0.1"
 
-# Stack that will be used by the builder
+# Base images used to create the builder
+[build]
+image = "cnbs/sample-base-build:jammy"
+[run]
+[[run.images]]
+image = "cnbs/sample-base-run:jammy"
+
+# Stack (deprecated) used to create the builder
 [stack]
 id = "io.buildpacks.samples.stacks.jammy"
-run-image = "cnbs/sample-stack-run:jammy"
-build-image = "cnbs/sample-stack-build:jammy"
+build-image = "cnbs/sample-base-build:jammy"
+run-image = "cnbs/sample-base-run:jammy"
