--- a/buildpacks/hello-moon-windows/buildpack.toml
+++ b/buildpacks/hello-moon-windows/buildpack.toml
@@ -8,9 +8,13 @@ version = "0.0.1"
 name = "Hello Moon Buildpack"
 homepage = "https://github.com/buildpacks/samples/tree/main/buildpacks/hello-moon-windows"
 
-# Stacks that the buildpack will work with
+# Targets the buildpack will work with
+[[targets]]
+os = "windows"
+
+# Stacks (deprecated) the buildpack will work with
 [[stacks]]
 id = "io.buildpacks.samples.stacks.nanoserver-2022"
 
 [[stacks]]
-  id = "io.buildpacks.samples.stacks.dotnet-framework-2022"
+id = "io.buildpacks.samples.stacks.dotnet-framework-2022"
