--- a/buildpacks/ruby-bundler/buildpack.toml
+++ b/buildpacks/ruby-bundler/buildpack.toml
@@ -8,13 +8,10 @@ version = "0.0.1"
 name = "Sample Ruby Buildpack"
 homepage = "https://github.com/buildpacks/samples/tree/main/buildpacks/ruby-bundler"
 
-# Stacks that the buildpack will work with
-[[stacks]]
-id = "io.buildpacks.samples.stacks.jammy"
+# Targets the buildpack will work with
+[[targets]]
+os = "linux"
 
+# Stacks (deprecated) the buildpack will work with
 [[stacks]]
 id = "*"
-
-[[stacks]]
-id = "io.buildpacks.stacks.jammy"
-mixins = ["build:set=shell-utils"]
