--- a/buildpacks/hello-moon/buildpack.toml
+++ b/buildpacks/hello-moon/buildpack.toml
@@ -7,16 +7,12 @@ id = "samples/hello-moon"
 version = "0.0.1"
 name = "Hello Moon Buildpack"
 homepage = "https://github.com/buildpacks/samples/tree/main/buildpacks/hello-moon"
+sbom-formats = ["application/vnd.cyclonedx+json"]
 
-# Stacks that the buildpack will work with
-[[stacks]]
-id = "io.buildpacks.samples.stacks.jammy"
+# Targets the buildpack will work with
+[[targets]]
+os = "linux"
 
-[[stacks]]
-id = "io.buildpacks.samples.stacks.alpine"
-
-[[stacks]]
-id = "io.buildpacks.stacks.jammy"
-
+# Stacks (deprecated) the buildpack will work with
 [[stacks]]
 id = "*"
