Move package.toml to be under buildpacks/
Having everything in one directory is more convenient and more discoverable

Signed-off-by: Natalie Arellano <narellano@vmware.com>

--- a/buildpacks/hello-universe-windows/package.toml
+++ b/buildpacks/hello-universe-windows/package.toml
@@ -1,11 +1,11 @@
 [buildpack]
-uri = "../../buildpacks/hello-universe-windows"
+uri = "."
 
 [[dependencies]]
-uri = "../../buildpacks/hello-moon-windows"
+uri = "../hello-moon-windows"
 
 [[dependencies]]
-uri = "../../buildpacks/hello-world-windows"
+uri = "../hello-world-windows"
 # Alternatively, to use an image while packaging, you can use:
 # uri = "docker://cnbs/sample-package:hello-world-windows"
 
