--- a/base-images/jammy/base/Dockerfile
+++ b/base-images/jammy/base/Dockerfile
@@ -1,5 +1,8 @@
 FROM ubuntu:jammy
 
+# Workaround for docker <= 20.10.9
+RUN sed -i -e 's/^APT/# APT/' -e 's/^DPkg/# DPkg/' /etc/apt/apt.conf.d/docker-clean
+
 # Install packages that we want to make available at both build and run time
 RUN apt update && \
   apt install -y xz-utils ca-certificates libyaml-0-2 && \
