--- a/buildpacks/java-maven/bin/build
+++ b/buildpacks/java-maven/bin/build
@@ -61,13 +61,15 @@ EOF
 
   mkdir -p ${jdk_layer_dir}/exec.d
   cat > "${jdk_layer_dir}/exec.d/jdk.sh" << EOF
-echo JAVA_HOME=${jdk_layer_dir} > \$1
+echo JAVA_HOME=${jdk_layer_dir}
 if [[ -z \$LD_LIBRARY_PATH ]]; then
-  echo LD_LIBRARY_PATH="\$JAVA_HOME/jre/lib/amd64/server" >> \$1
+  echo LD_LIBRARY_PATH="\$JAVA_HOME/jre/lib/amd64/server"
 else
-  echo LD_LIBRARY_PATH="\$JAVA_HOME/jre/lib/amd64/server:${LD_LIBRARY_PATH}" >> \$1
+  echo LD_LIBRARY_PATH="\$JAVA_HOME/jre/lib/amd64/server:${LD_LIBRARY_PATH}"
 fi
+echo PATH="\${PATH}:\${JAVA_HOME}/bin"
 EOF
+  chmod u+x,g+x "${jdk_layer_dir}/exec.d/jdk.sh"
 fi
 export JAVA_HOME=${jdk_layer_dir}
 
