--- a/apps/bash-script/bash-script-buildpack/bin/build
+++ b/apps/bash-script/bash-script-buildpack/bin/build
@@ -11,6 +11,7 @@ cat >> "${layers_dir}/launch.toml" <<EOL
 [[processes]]
 type = "web"
 command = ["./app.sh"]
+default = "true"
 EOL
 
 # LIST CONTENTS
