--- a/builders/noble/builder.toml
+++ b/builders/noble/builder.toml
@@ -40,13 +40,13 @@ version = "0.0.1"
 
 # Base images used to create the builder
 [build]
-image = "cnbs/sample-base-build:jammy"
+image = "cnbs/sample-base-build:noble"
 [run]
 [[run.images]]
-image = "cnbs/sample-base-run:jammy"
+image = "cnbs/sample-base-run:noble"
 
 # Stack (deprecated) used to create the builder
 [stack]
-id = "io.buildpacks.samples.stacks.jammy"
-build-image = "cnbs/sample-base-build:jammy"
-run-image = "cnbs/sample-base-run:jammy"
+id = "io.buildpacks.samples.stacks.noble"
+build-image = "cnbs/sample-base-build:noble"
+run-image = "cnbs/sample-base-run:noble"
