Create mulitarch noble builder
Use the base Ubuntu Noble images as our build and run images for
mulitarch examples

Signed-off-by: Aidan Delaney <aidan.delaney@gmail.com>

--- a/builders/noble/builder.toml
+++ b/builders/noble/builder.toml
@@ -45,8 +45,10 @@ image = "cnbs/sample-base-build:noble"
 [[run.images]]
 image = "cnbs/sample-base-run:noble"
 
-# Stack (deprecated) used to create the builder
-[stack]
-id = "io.buildpacks.samples.stacks.noble"
-build-image = "cnbs/sample-base-build:noble"
-run-image = "cnbs/sample-base-run:noble"
+[[targets]]
+arch = "amd64"
+os = "linux"
+
+[[targets]]
+arch = "arm64"
+os = "linux"
