Make all samples multi-arch
Restrict samples that download amd64 binaries to amd64

Signed-off-by: Aidan Delaney <aidan.delaney@gmail.com>

--- a/builders/alpine/builder.toml
+++ b/builders/alpine/builder.toml
@@ -1,12 +1,12 @@
 # Buildpacks to include in builder
 [[buildpacks]]
 id = "samples/java-maven"
-version = "0.0.2"
+version = "0.0.3"
 uri = "../../buildpacks/java-maven"
 
 [[buildpacks]]
 id = "samples/kotlin-gradle"
-version = "0.0.2"
+version = "0.0.3"
 uri = "../../buildpacks/kotlin-gradle"
 
 [[buildpacks]]
@@ -42,17 +42,17 @@ version = "0.0.1"
 [[order]]
 [[order.group]]
 id = "samples/java-maven"
-version = "0.0.2"
+version = "0.0.3"
 
 [[order]]
 [[order.group]]
 id = "samples/kotlin-gradle"
-version = "0.0.2"
+version = "0.0.3"
 
 [[order]]
 [[order.group]]
 id = "samples/hello-universe"
-version = "0.0.1"
+version = "0.0.2"
 
 # Order used for detection (extensions)
 [[order-extensions]]
@@ -75,8 +75,10 @@ image = "cnbs/sample-base-build:alpine"
 [[run.images]]
 image = "cnbs/sample-base-run:alpine"
 
-# Stack (deprecated) used to create the builder
-[stack]
-id = "io.buildpacks.samples.stacks.alpine"
-build-image = "cnbs/sample-base-build:alpine"
-run-image = "cnbs/sample-base-run:alpine"
+[[targets]]
+arch = "amd64"
+os = "linux"
+
+[[targets]]
+arch = "arm64"
+os = "linux"
